# RAGProject

./: info.txt  main.py  parsing.py  products.json  pyproject.toml  sequences.txt  worked.txt  worked_.txt
faiss_index_tlite/: index.pkl  source
rag/: __init__.py  faiss_db.py  logger.py  search.py  templates.py
