[project]
name = "ragproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.7",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "pymorphy3>=2.0.4",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "requests>=2.32.3",
]
